--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .container{
     width: 1000px;
     margin: 0 auto;
@@ -17,20 +21,17 @@
     clear: both;
 }
 
+.border-curve{
+    border-radius: 8px;
+}
+
 
 /* Layout */
 
 header{
-    width: 100%;
-    height: 70px;
-    background-color: #E579E6;
-    margin-top: 15px;
 }
 
 .main-section{
-    width: 100%;
-    height: 280px;
-    background-color: #E1D67A;
     margin: 15px 0;
 }
 
@@ -67,4 +68,43 @@ footer{
     height: 50px;
     background-color: #8801FE;
     margin: 8px 0 15px 0;
+}
+
+/* Header section */
+
+#logo{
+    height: 60px;
+}
+
+ul li{
+    display: inline-block;
+    margin-top: 25px;
+    font-size: 14px;
+}
+
+a{
+    text-decoration: none;
+    color: #a1a1a1;
+}
+
+/* Main-section */
+
+.bg-main-sec{
+   background-color: rgba(203,188,182,1);
+   background-image: url(../img/banner.jpg); 
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center;
+   width: 100%;
+   min-height: 400px;
+}
+
+.bg-opacity{
+    min-height: 400px;
+    width: 1000px;
+    background-color: rgba(87, 54, 43, 0.3);
+}
+
+.white-text{
+    color: white;
 }
