--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,14 @@ a{
 .white-text{
     color: white;
 }
+
+.info-main{
+    max-width: 450px;
+    position: relative;
+    top: 250px;
+    left: 50px;
+}
+
+h2{
+    font-weight: lighter;
+}
