--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body{
     margin: 0 auto;
 }
 
+/* Utils */
+
 .clearfix::after{
     display: table;
     content: '';
@@ -25,7 +27,14 @@ body{
     border-radius: 8px;
 }
 
+.white-text{
+    color: white;
+}
 
+.grey-text{
+    color: #a1a1a1;
+    font-size: 16px;
+}
 /* Layout */
 
 header{
@@ -36,21 +45,17 @@ header{
 }
 
 main{
-    width: 100%;
-    height: 500px;
-    background-color: #0086FF;
+    min-height: 500px;
+    background-color: #99b88b;
 }
 
 .header-main{
-    width: 100%;
-    height: 60px;
-    background-color: #ABCFE7;
 }
 
 .sidebar-main{
     width: 20%;
     height: 400px;
-    background-color: #ABCFE7;
+    /* background-color: #ABCFE7; */
     float: left;
     margin-top: 20px;
 }
@@ -87,7 +92,7 @@ a{
     color: #a1a1a1;
 }
 
-/* Main-section */
+/* Spotlight-section */
 
 .bg-main-sec{
    background-color: rgba(203,188,182,1);
@@ -101,12 +106,7 @@ a{
 
 .bg-opacity{
     min-height: 400px;
-    width: 1000px;
     background-color: rgba(87, 54, 43, 0.3);
-}
-
-.white-text{
-    color: white;
 }
 
 .info-main{
@@ -116,6 +116,25 @@ a{
     left: 50px;
 }
 
-h2{
+.info-main h2{
     font-weight: lighter;
+}
+
+/* Leadership section */
+
+.side-photo{
+    width: 100%;
+    min-height: 200px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.photo-left{
+    background-image: url(../img/img-1.jpg);
+}
+
+
+.photo-right{
+    background-image: url(../img/img-3.jpg);
 }
