--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,6 @@ header{
 
 main{
     min-height: 500px;
-    background-color: #99b88b;
 }
 
 .header-main{
@@ -55,7 +54,6 @@ main{
 .sidebar-main{
     width: 20%;
     height: 400px;
-    /* background-color: #ABCFE7; */
     float: left;
     margin-top: 20px;
 }
@@ -63,7 +61,6 @@ main{
 .box-main{
     width: calc(60% - 30px);
     height: 400px;
-    background-color: #ABCFE7;
     float: left;
     margin: 20px 15px;
 }
@@ -84,6 +81,7 @@ footer{
 ul li{
     display: inline-block;
     margin-top: 25px;
+    margin-right: 8px;
     font-size: 14px;
 }
 
@@ -137,4 +135,17 @@ a{
 
 .photo-right{
     background-image: url(../img/img-3.jpg);
+}
+
+.bg-opacity-small{
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 200px;
+}
+
+.center-photo{
+    min-height: 200px;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    background-image: url(../img/banner-2.jpg);
 }
