--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@ main{
 }
 
 footer{
-    width: 100%;
     height: 50px;
     background-color: #8801FE;
     margin: 8px 0 15px 0;
@@ -126,6 +125,7 @@ a{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    margin-bottom: 10px;
 }
 
 .photo-left{
@@ -148,4 +148,9 @@ a{
     background-position: center;
     background-size: cover;
     background-image: url(../img/banner-2.jpg);
+    margin-bottom: 10px;
+}
+
+.margin-content{
+    margin-top: 10px;
 }
