--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ a{
    background-position: center;
    width: 100%;
    min-height: 400px;
+   position: relative;
 }
 
 .bg-opacity{
@@ -101,8 +102,8 @@ a{
 
 .info-main{
     max-width: 450px;
-    position: relative;
-    top: 250px;
+    position: absolute;
+    bottom: 40px;
     left: 50px;
 }
 
